welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: value unary_! is not a member of Int
  if(!Math.abs(15 - a) <= 5 && !Math.abs(15 - b) <= 5)
     ^max1020:2: error: value unary_! is not a member of Int
  if(!Math.abs(15 - a) <= 5 && !Math.abs(15 - b) <= 5)
                               ^